Kubernetes/Wordpress + MySql+Varnish/varnish-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: varnish
  name: varnish
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: varnish
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/project: "true"
        io.kompose.service: varnish
    spec:
      containers:
        - args:
            - -p
            - default_keep=300
          image: varnish:stable
          name: varnish
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /etc/varnish/default.vcl
              name: varnish-claim0
            - mountPath: /var/lib/varnish
              name: varnish-tmpfs0
      restartPolicy: Always
      volumes:
        - name: varnish-claim0
          persistentVolumeClaim:
            claimName: varnish-claim0
        - emptyDir:
            medium: Memory
          name: varnish-tmpfs0
status: {}
