Kubernetes/Wordpress + MySql+Varnish/wp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: wp
  name: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wp
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/project: "true"
        io.kompose.service: wp
    spec:
      containers:
        - env:
            - name: WORDPRESS_DB_HOST
              value: db
            - name: WORDPRESS_DB_NAME
              value: test
            - name: WORDPRESS_DB_PASSWORD
              value: wordpress
            - name: WORDPRESS_DB_USER
              value: wordpress
          image: wordpress:latest
          name: wp
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: wp-claim0
            - mountPath: /var/www/wp-content/uploads
              name: wp-claim1
      restartPolicy: Always
      volumes:
        - name: wp-claim0
          persistentVolumeClaim:
            claimName: wp-claim0
        - name: wp-claim1
          persistentVolumeClaim:
            claimName: wp-claim1
status: {}
