Kubernetes/Wordpress + MySql+Varnish/pma-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pma
  name: pma
spec:
  ports:
    - name: "90"
      port: 90
      targetPort: 80
  selector:
    io.kompose.service: pma
status:
  loadBalancer: {}
