Kubernetes/Wordpress + MySql+Varnish/project-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: project
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/project: "true"
  podSelector:
    matchLabels:
      io.kompose.network/project: "true"
